# ncspot

./: Cargo.toml  README.md
src/: application.rs  authentication.rs  cli.rs  command.rs  commands.rs  config.rs  events.rs  fs.rs  lib.rs  library.rs  main.rs  panic.rs  queue.rs  serialization.rs  spotify.rs  spotify_api.rs  spotify_worker.rs  traits.rs  utils.rs
src/model/: album.rs  artist.rs  category.rs  episode.rs  playable.rs  playlist.rs  show.rs  track.rs
src/ui/: album.rs  contextmenu.rs  help.rs  layout.rs  library.rs  listview.rs  mod.rs  playlist.rs  playlists.rs  queue.rs  search.rs  search_results.rs  selectview.rs  statusbar.rs
