[package]
authors = ["Henrik Friedrichsen <henrik@affekt.org>"]
description = "ncurses Spotify client written in Rust using librespot, inspired by ncmpc and the likes."
edition = "2021"
exclude = ["images/**"]
keywords = ["spotify", "ncurses", "librespot", "terminal"]
license = "BSD-2-Clause"
name = "ncspot"
readme = "README.md"
repository = "https://github.com/hrkfdn/ncspot"
version = "1.0.0"

[profile.release]
lto = true
codegen-units = 1

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
chrono = "0.4"
clap = "4.4.13"
crossbeam-channel = "0.5"
fern = "0.6"
futures = "0.3"
libc = "0.2.152"
librespot-core = "0.4.2"
librespot-playback = "0.4.2"
librespot-protocol = "0.4.2"
log = "0.4.16"
pancurses = {version = "0.17.0", optional = true}
parse_duration = "2.1.1"
rand = "0.8"
regex = "1"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "sync", "time", "net"]}
tokio-util = {version = "0.7.10", features = ["codec"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
unicode-width = "0.1.9"
url = "2.5"
cursive_buffered_backend = "0.6.1"
dirs = "5.0.1"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.0"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[dependencies.rspotify]
default-features = false
features = ["client-ureq", "ureq-rustls-tls"]
version = "0.12.0"

[dependencies.cursive]
default-features = false
version = "0.20.0"

[features]
alsa_backend = ["librespot-playback/alsa-backend"]
default = ["pulseaudio_backend", "ncurses_backend"]
ncurses_backend = ["cursive/ncurses-backend"]
crossterm_backend = ["cursive/crossterm-backend"]
pancurses_backend = ["cursive/pancurses-backend", "pancurses/win32"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]
termion_backend = ["cursive/termion-backend"]

